# dam

./: .gitignore  README.md  pyproject.toml
dam/: __init__.py  application.py  stream.py  topic.py
example/: simple_consumer.py
example/simple-kafka-consumer/: README.md  requirements.txt  simple_consumer.py
scripts/: clean  lint  test
tests/: test_version.py
