[tool.poetry]
name = "dam"
version = "0.1.0"
description = "Python Stream Processing toolkit"
authors = [
    "Marcos Schroh <schrohm@gmail.com>",
    "Santiago Fraire Willemoës <santiwilly@gmail.com>"
]
readme = "README.md"
keywords = ["stream", "processing", "streaming", "async"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
pytest-cov = "^2.8.1"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
